; ModuleID = '/home/carl/AnghaBench/zstd/lib/compress/extr_zstd_compress.c_ZSTD_initCStream_advanced.c'
source_filename = "/home/carl/AnghaBench/zstd/lib/compress/extr_zstd_compress.c_ZSTD_initCStream_advanced.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_12__ = type { i32 }
%struct.TYPE_11__ = type { i32, %struct.TYPE_10__ }
%struct.TYPE_10__ = type { i64 }

@ZSTD_CONTENTSIZE_UNKNOWN = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [26 x i8] c"ZSTD_initCStream_advanced\00", align 1
@ZSTD_reset_session_only = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @ZSTD_initCStream_advanced(%struct.TYPE_12__* %0, i8* %1, i64 %2, i32 %3, i64 %4, i64 %5) #0 {
  %7 = alloca %struct.TYPE_11__, align 8
  %8 = alloca %struct.TYPE_12__*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i64, align 8
  %11 = alloca i64, align 8
  %12 = alloca i64, align 8
  %13 = bitcast %struct.TYPE_11__* %7 to { i32, i64 }*
  %14 = getelementptr inbounds { i32, i64 }, { i32, i64 }* %13, i32 0, i32 0
  store i32 %3, i32* %14, align 8
  %15 = getelementptr inbounds { i32, i64 }, { i32, i64 }* %13, i32 0, i32 1
  store i64 %4, i64* %15, align 8
  store %struct.TYPE_12__* %0, %struct.TYPE_12__** %8, align 8
  store i8* %1, i8** %9, align 8
  store i64 %2, i64* %10, align 8
  store i64 %5, i64* %11, align 8
  %16 = load i64, i64* %11, align 8
  %17 = icmp eq i64 %16, 0
  br i1 %17, label %18, label %25

18:                                               ; preds = %6
  %19 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %7, i32 0, i32 1
  %20 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %19, i32 0, i32 0
  %21 = load i64, i64* %20, align 8
  %22 = icmp eq i64 %21, 0
  br i1 %22, label %23, label %25

23:                                               ; preds = %18
  %24 = load i64, i64* @ZSTD_CONTENTSIZE_UNKNOWN, align 8
  br label %27

25:                                               ; preds = %18, %6
  %26 = load i64, i64* %11, align 8
  br label %27

27:                                               ; preds = %25, %23
  %28 = phi i64 [ %24, %23 ], [ %26, %25 ]
  store i64 %28, i64* %12, align 8
  %29 = call i32 @DEBUGLOG(i32 4, i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str, i64 0, i64 0))
  %30 = load %struct.TYPE_12__*, %struct.TYPE_12__** %8, align 8
  %31 = load i32, i32* @ZSTD_reset_session_only, align 4
  %32 = call i32 @ZSTD_CCtx_reset(%struct.TYPE_12__* %30, i32 %31)
  %33 = call i32 @FORWARD_IF_ERROR(i32 %32)
  %34 = load %struct.TYPE_12__*, %struct.TYPE_12__** %8, align 8
  %35 = load i64, i64* %12, align 8
  %36 = call i32 @ZSTD_CCtx_setPledgedSrcSize(%struct.TYPE_12__* %34, i64 %35)
  %37 = call i32 @FORWARD_IF_ERROR(i32 %36)
  %38 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %7, i32 0, i32 0
  %39 = load i32, i32* %38, align 8
  %40 = call i32 @ZSTD_checkCParams(i32 %39)
  %41 = call i32 @FORWARD_IF_ERROR(i32 %40)
  %42 = load %struct.TYPE_12__*, %struct.TYPE_12__** %8, align 8
  %43 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %42, i32 0, i32 0
  %44 = call i32 @ZSTD_assignParamsToCCtxParams(i32* %43, %struct.TYPE_11__* %7)
  %45 = load %struct.TYPE_12__*, %struct.TYPE_12__** %8, align 8
  %46 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %45, i32 0, i32 0
  store i32 %44, i32* %46, align 4
  %47 = load %struct.TYPE_12__*, %struct.TYPE_12__** %8, align 8
  %48 = load i8*, i8** %9, align 8
  %49 = load i64, i64* %10, align 8
  %50 = call i32 @ZSTD_CCtx_loadDictionary(%struct.TYPE_12__* %47, i8* %48, i64 %49)
  %51 = call i32 @FORWARD_IF_ERROR(i32 %50)
  ret i64 0
}

declare dso_local i32 @DEBUGLOG(i32, i8*) #1

declare dso_local i32 @FORWARD_IF_ERROR(i32) #1

declare dso_local i32 @ZSTD_CCtx_reset(%struct.TYPE_12__*, i32) #1

declare dso_local i32 @ZSTD_CCtx_setPledgedSrcSize(%struct.TYPE_12__*, i64) #1

declare dso_local i32 @ZSTD_checkCParams(i32) #1

declare dso_local i32 @ZSTD_assignParamsToCCtxParams(i32*, %struct.TYPE_11__*) #1

declare dso_local i32 @ZSTD_CCtx_loadDictionary(%struct.TYPE_12__*, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
